<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Relative_4"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    android:gravity="center" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" >

            <EditText
                android:id="@+id/user_name"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/myedittext"
                android:hint="@string/username"
                android:textColor="#ADADAD"
                android:textColorHint="#ADADAD" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" >

            <EditText
                android:id="@+id/user_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/myedittext"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#ADADAD"
                android:textColorHint="#ADADAD" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/signin_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_marginStart="85dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/mybutton"
                android:padding="10dp"
                android:text="@string/signin"
                android:textColor="#ffffff" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_marginStart="85dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/mybutton"
                android:padding="10dp"
                android:text="@string/register"
                android:textColor="#ffffff" />
        </TableRow>
    </TableLayout>

</RelativeLayout>